# spear

./: .clang-format  .claudeignore  .cursorignore  .gitattributes  .gitignore  .gitmodules  .mcp.json  ACKNOWLEDGMENTS.txt  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE.txt  LICENSE_ASSETS.txt  README.md
.cursor/: mcp.json
code/unreal_plugins/RobotSim/Content/Examples/fetch_description/: CHANGELOG.rst  package.xml
code/unreal_plugins/RobotSim/Content/Examples/fetch_description/meshes/: Camera_001.uasset  Material_001.uasset  Material_001_001.uasset  Material_001_003.uasset  Material_001_004.uasset  Material_001_005.uasset  Material_001_006.uasset  Material_001_007.uasset  Material_001_008.uasset  Material_001_010.uasset  Material_001_011.uasset  Material_001_012.uasset  Material_001_013.uasset  base_link.uasset  base_link1.uasset  base_link_collision.stl  base_link_collision.uasset  base_link_uv.uasset  bellows_link.stl  bellows_link.uasset  bellows_link_collision.stl  bellows_link_collision.uasset  elbow_flex_link.stl  elbow_flex_link.uasset  elbow_flex_link1.uasset  elbow_flex_link_collision.stl  elbow_flex_link_collision.uasset  elbow_flex_uv.uasset  estop_link.stl  estop_link.uasset  forearm_roll_link.uasset  forearm_roll_link1.uasset  forearm_roll_link_collision.uasset  forearm_roll_uv.uasset  gripper_link.uasset  gripper_link1.uasset  gripper_uv.uasset  head_pan_link.stl  head_pan_link.uasset  head_pan_link1.uasset  (+56 more)
code/unreal_plugins/RobotSim/Content/Examples/fetch_description/meshes_stl/: forearm_roll_link.stl  forearm_roll_link_collision.stl  gripper_link.stl  l_wheel_link.stl  l_wheel_link_collision.stl  laser_link.stl  new_torso.stl  r_gripper_finger_link.stl  r_wheel_link.stl  shoulder_lift_link.stl  torso_fixed_link.stl  upperarm_roll_link.stl  wrist_flex_link_collision.stl  wrist_roll_link.stl  wrist_roll_link_collision.stl
code/unreal_plugins/RobotSim/Content/Examples/fetch_description/robots/: fetch.urdf  fetch.xml  test.xml
docs/: ActorSpawn.md  CONTRIBUTING.md  InSim-UnreaRL-plugins-setup.md  InteriorSimBridge-setup.md  InteriorSimBridge.md  SceneManager.md  VirtualWorldManager.md  agents.mcp_usage.md  agents.md  agents.style_guide.md  agents_mcp_usage.md  building_spear_sim.md  building_spearsim.md  cluster_setup.md  coding_guidelines.md  content_guidelines.md  controlling_with_natural_language.md  getting_started.md  getting_started_cluster.md  importing_and_exporting_assets.md  kujiale_scene_data_structure.md  running_asset_pipeline.md  running_export_pipeline.md  running_our_example_applications.md
editor/: create_asset_bp_axes.py  create_asset_bp_camera_sensor.py  create_asset_bp_camera_sensor_multi_view_13.py  create_asset_bp_camera_sensor_multi_view_33.py  create_asset_bp_camera_sensor_path_tracer.py  create_asset_bp_camera_sensor_path_tracer_ust.py  create_asset_bp_camera_sensor_ust.py  create_asset_bp_multi_view_camera_sensor.py  create_asset_bp_multi_view_camera_sensor_13.py  create_asset_bp_multi_view_camera_sensor_33.py  create_asset_bp_sphere_agent.py  create_asset_mppc_default_configs.py  create_asset_ppm_ust_instances.py  debug_print_actors.py  editor_asset_library_utils_rename_content.py  export_unreal_geometry.py  modify_scene_add_nav_mesh_bounds_volume.py  modify_scene_add_stable_name_components.py  run_editor_script_for_each_map.py
export/: .gitignore  README.md  do_export.py  environment.yml  export_meshes_and_joints_from_ue.py  print_component_pose.py  (+3 more)
python/: pip_build_constraint.txt  pyproject.toml  setup.py
python/spear/: __init__.py  communicator.py  config.py  editor.py  editor_utils.py  engine_service.py  enhanced_input_service.py  env.py  func_utils.py  game_world_service.py  image_utils.py  initialize_editor_world_service.py  initialize_game_world_service.py  input_service.py  instance.py  legacy_service.py  log.py  navigation_service.py  navmesh.py  navmesh_service.py  path.py  pipeline.py  pipeline_utils.py  ptr.py  scene.py  shared_memory_service.py  simulation_controller.py  sp_engine.py  sp_func_service.py  system.py  tool_utils.py  tools.py  unreal.py  unreal_object.py  unreal_service.py  world_service.py
python/spear/config/: default_config.core_utils.yaml  default_config.openbot.yaml  default_config.simulation_controller.yaml  default_config.sp_components.yaml  default_config.sp_core.yaml  default_config.sp_engine.yaml  default_config.sp_services.yaml  default_config.spear.yaml  default_config.urdf_robot.yaml  default_config.urdfbot.yaml  default_config.vehicle.yaml  default_config.wheeled_vehicle.yaml
python/spear/services/: __init__.py  async_loading_service.py  console_service.py  debug_service.py  editor_python_service.py  engine_globals_service.py  engine_service.py  enhanced_input_service.py  entry_point_caller.py  initialize_editor_world_service.py  initialize_game_world_service.py  initialize_world_service.py  input_service.py  navigation_service.py  python_service.py  rendering_service.py  segmentation_service.py  shared_memory_service.py  sp_func_service.py  unreal_service.py  world_registry_service.py
python/spear/tools/: run_imshow.py
python/spear/urdf/: arm.xml  double_pendulum.urdf  double_pendulum.xml  double_pendulum_mujoco.xml  fetch.urdf  fetch.xml  fetch_no_spear.urdf  fetch_physics_disabled.urdf  horizontal_pendulum.urdf  locobot.xml  pendulum.urdf  pendulum_horizontal.urdf  pendulum_vertical.urdf  simple_continuous.xml  simple_prismatic.xml  spring_damper.xml
python/spear/utils/: __init__.py  collision_utils.py  config_utils.py  editor_utils.py  func_utils.py  log_utils.py  math_utils.py  path_utils.py  pipeline_utils.py  rendering_utils.py  system_utils.py  tool_utils.py
python_ext/: CMakeLists.txt  pyproject.toml
python_ext/cpp/: assert.h  client.h  func_signature_registry.h  msgpack_adaptors.h  msgpack_utils.h  spear_ext.cpp  std.h  types.h
python_ext/python/spear_ext/: __init__.py
(+5615 files in other folders)
