#
# Copyright(c) 2022 Intel. Licensed under the MIT License <http://opensource.org/licenses/MIT>.
#

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["spear"]

[project]
name = "spear-sim"
version = "0.6.0"
requires-python = ">=3.11"
dependencies = [
    "coacd==1.0.0",
    "configobj==5.0.9",                       # required by mayavi but not automatically installed
    "gym==0.23.0",
    "matplotlib==3.10.0",
    "mayavi==4.8.2; sys_platform != 'win32'", # install separately on Windows via "conda install -c conda-forge mayavi"
    "mujoco==3.1.3",
    "numpy==2.0.2",
    "opencv-python==4.10.0.84",
    "pandas==2.2.3",
    "psutil==5.9.0",
    "scipy==1.14.1",
    "trimesh==4.4.0",
    "vtk==9.4.1; sys_platform != 'win32'",    # install separately on Windows via "conda install -c conda-forge mayavi"
    "wget==3.2",
    "yacs==0.1.8"]
