#
# Copyright (c) 2025 The SPEAR Development Team. Licensed under the MIT License <http://opensource.org/licenses/MIT>.
# Copyright (c) 2022 Intel. Licensed under the MIT License <http://opensource.org/licenses/MIT>.
#

[build-system]
requires = ["hatchling==1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["spear"]

[project]
name = "spear-sim"
version = "1.0.0"
requires-python = "~=3.11"
dependencies = [
    "numpy==2.0.2",
    "p4python==2025.1.2767466",
    "pandas==2.2.3",
    "psutil==5.9.0",
    "scipy==1.14.1",
    "yacs==0.1.8"]

[project.optional-dependencies]
examples = [
    "jupyterlab==4.4.4",
    "matplotlib==3.10.0",
    "opencv-python==4.10.0.84",
    "wget==3.2"]
pipeline = [
    "coacd==1.0.0",
    "mujoco==3.5.0",
    "trimesh==4.4.0"]
