#
# Copyright(c) 2025 The SPEAR Development Team. Licensed under the MIT License <http://opensource.org/licenses/MIT>.
# Copyright(c) 2022 Intel. Licensed under the MIT License <http://opensource.org/licenses/MIT>.
#

[build-system]
requires = ["nanobind==2.7.0", "scikit-build-core==0.10"]
build-backend = "scikit_build_core.build"

[project]
name = "spear-ext"
version = "0.6.0"
requires-python = "~=3.11"

[tool.scikit-build]
minimum-version = "build-system.requires" # protect the configuration against future changes in scikit-build-core
build-dir = "BUILD/{wheel_tag}"           # setuptools-style build caching in a local directory
wheel.py-api = "cp312"                    # build stable ABI wheels for CPython 3.12+
build.verbose = true
logging.level = "INFO"

[tool.cibuildwheel]
build-verbosity = 1                       # necessary to see build output from the actual compilation

[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"        # necessary for full C++17 support

[tool.wheel]
license-files = []                        # necessary to suppress warning
