<?xml version="1.0"?>
<package format="2">
  <name>fetch_description</name>
  <version>0.8.3</version>
  <description>
    URDF for Fetch Robot.
  </description>

  <author>Michael Ferguson</author>
  <author>Melonee Wise</author>
  <maintainer email="erelson@fetchrobotics.com">Eric Relson</maintainer>
  <maintainer email="narora@fetchrobotics.com">Niharika Arora</maintainer>
  <maintainer email="csaldanha@fetchrobotics.com">Carl Saldanha</maintainer>
  <maintainer email="selliott@fetchrobotics.com">Sarah Elliott</maintainer>
  <maintainer email="rtoris@fetchrobotics.com">Russell Toris</maintainer>
  <maintainer email="opensource@fetchrobotics.com">Fetch Robotics Open Source Team</maintainer>

  <license>CreativeCommons-Attribution-NonCommercial-ShareAlike-4.0-International</license>
  <url type="wiki">http://ros.org/wiki/fetch_description</url>
  <url type="website">http://docs.fetchrobotics.com/robot_hardware.html</url>
  <url type="bugtracker">https://github.com/fetchrobotics/fetch_ros/issues</url>
  <url type="repository">https://github.com/fetchrobotics/fetch_ros</url>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
</package>
